# probe_station_gui

./: main.py  pyproject.toml
probe_station_gui/: __init__.py  camera_worker.py  default_settings.json  logging_config.py  qt_compat.py  settings_manager.py  stage_controller.py
probe_station_gui/dialogs/: __init__.py  serial_scanner.py  settings_dialog.py
probe_station_gui/views/: __init__.py  dock_widgets.py  joystick_window.py  microscope_view.py  serial_connection_panel.py  serial_terminal_window.py
